--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -12,5 +12,8 @@ home ne!!
 <div>
     <a th:href="@{/look-video}">Xem Video</a>
 </div>
+<div>
+    <a th:href="@{/login}">Login</a>
+</div>
 </body>
 </html>
